[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/guns/gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://shaders/flash.shader" type="Shader" id=2]
[ext_resource path="res://sprites/weapons/guns/twinshot.png" type="Texture" id=3]
[ext_resource path="res://characters/Hostiles/twinshot_bot/twinshot_gun.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[node name="weapon" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Sprite" parent="muzzle" index="0"]
material = SubResource( 1 )
position = Vector2( -0.138494, 0.270857 )
rotation = -1.5708
texture = ExtResource( 3 )

[node name="bullet_exit" parent="muzzle" index="1"]
position = Vector2( 21.8884, -0.107306 )

[node name="bullet_interval" type="Timer" parent="." index="4"]
wait_time = 0.2
one_shot = true

[node name="shoot_sound" parent="." index="5"]
volume_db = -6.0
pitch_scale = 0.5
max_distance = 600.0

[connection signal="timeout" from="bullet_interval" to="." method="_on_bullet_interval_timeout"]
